<resources>
    <string name="app_name">URLKeeper</string>
    <string name="home">Home</string>
    <string name="manager">URL Manager</string>
    <string name="search">Search Title or URL</string>
    <string name="new_note">Create New Note</string>
    <string name="title">Title</string>
    <string name="link">Link</string>
    <string name="short_link">Shorten Link</string>
    <string name="generate_sl">Generate Short Link</string>
    <string name="last_edited">Last edited : %1$s</string>
    <string name="favorite">Favorite</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="secret_note">Secret Note</string>
    <string name="visible_note">Note</string>
    <string name="save">Save</string>
    <string name="delete_title_dialog">Delete this note?</string>
    <string name="delete_message_dialog">A deleted note could not be restored.</string>
    <string name="cancel">Cancel</string>
    <string name="connect">Sign in</string>
    <string name="sign_in_message">You have to sign in (anonymously) to use all feature.</string>
    <string name="sign_in">Go ahead</string>
    <string name="star">Star URL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>