<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base"
    tools:context=".activity.AddNoteActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/materialToolbar_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                app:menu="@menu/view_note"
                app:navigationIcon="@drawable/ic_angle_left_solid"
                style="@style/Widget.App.Toolbar"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addTitle_inputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"

                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"

                    app:boxBackgroundColor="@color/brown90"
                    app:boxStrokeColor="@color/japan"

                    android:hint="@string/title"
                    android:textColorHint="@color/japan"
                    app:hintTextColor="@color/japan"
                    app:hintTextAppearance="@style/TextAppearance.Material3.BodyLarge">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addTitle_InputEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""

                        android:inputType="textMultiLine"
                        android:textCursorDrawable="@drawable/cursor"/>

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/addLink_inputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/addCopyLink_button"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="5dp"

                        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"

                        app:boxBackgroundColor="@color/brown90"
                        app:boxStrokeColor="@color/japan"

                        android:hint="@string/link"
                        android:textColorHint="@color/japan"
                        app:hintTextColor="@color/japan"
                        app:hintTextAppearance="@style/TextAppearance.Material3.BodyLarge">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/addLink_inputEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""

                            android:inputType="text"
                            android:textCursorDrawable="@drawable/cursor"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/addCopyLink_button"
                        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"

                        android:layout_marginTop="6dp"
                        android:backgroundTint="@color/japan80"
                        android:paddingTop="19dp"

                        android:paddingBottom="19dp"
                        app:icon="@drawable/ic_clone_solid"
                        app:iconTint="@color/white"
                        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium" />

                </RelativeLayout>


                <Button
                    android:id="@+id/addGenerate_shortlink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="20dp"
                    android:paddingTop="17dp"
                    android:paddingBottom="17dp"

                    android:backgroundTint="@color/japan80"

                    android:text="@string/generate_sl"
                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"

                    style="@style/Widget.Material3.Button.ElevatedButton"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"/>

                <RelativeLayout
                    android:id="@+id/addShortLink_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/addShortLink_inputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/addCopyShortLink_button"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="5dp"

                        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"

                        app:boxBackgroundColor="@color/brown90"
                        app:boxStrokeColor="@color/japan"

                        android:hint="@string/short_link"
                        android:textColorHint="@color/japan"
                        app:hintTextColor="@color/japan"
                        app:hintTextAppearance="@style/TextAppearance.Material3.BodyLarge">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/addShortLink_inputEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"

                            android:text="0"
                            android:inputType="text"
                            android:textCursorDrawable="@drawable/cursor"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/addCopyShortLink_button"
                        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"

                        android:layout_marginTop="6dp"
                        android:backgroundTint="@color/japan80"
                        android:paddingTop="19dp"

                        android:paddingBottom="19dp"
                        app:icon="@drawable/ic_clone_solid"
                        app:iconTint="@color/white"
                        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium" />

                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addSecretNote_inputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:endIconMode="password_toggle"

                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"

                    app:boxBackgroundColor="@color/brown90"
                    app:boxStrokeColor="@color/japan"

                    android:hint="@string/secret_note"
                    android:textColorHint="@color/japan"
                    app:hintTextColor="@color/japan"
                    app:hintTextAppearance="@style/TextAppearance.Material3.BodyLarge">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addSecretNote_inputEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:inputType="textPassword|textMultiLine"
                        android:textCursorDrawable="@drawable/cursor"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addVisibleNote_inputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"

                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"

                    app:boxBackgroundColor="@color/brown90"
                    app:boxStrokeColor="@color/japan"

                    android:hint="@string/visible_note"
                    android:textColorHint="@color/japan"
                    app:hintTextColor="@color/japan"
                    app:hintTextAppearance="@style/TextAppearance.Material3.BodyLarge">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addVisibleNote_InputEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:inputType="textMultiLine"
                        android:textCursorDrawable="@drawable/cursor"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/addSave_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/coral"

            android:layout_marginTop="20dp"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"

            android:text="@string/save"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            style="@style/Widget.Material3.Button.ElevatedButton"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.None"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>