<?xml version="1.0" encoding="utf-8"?>

<!-- 06/08/2022 | 10119239 | DEA INESIA SRI UTAMI | IF6 -->

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/url_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"

    app:cardBackgroundColor="@color/brown90"
    app:strokeColor="@color/japan" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/title_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/star_check"
                android:text="@string/title"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="@color/japan"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/star_check"
                android:layout_width="21dp"
                android:layout_height="18dp"
                android:layout_alignParentEnd="true"
                android:button="@drawable/star_state"
                app:buttonTint="@color/coral" />

        </RelativeLayout>

        <View
            android:id="@+id/title_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/title_layout"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@color/japan80" />

        <RelativeLayout
            android:id="@+id/linkView_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_divider"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/link_inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/copyLink_button"
                android:layout_centerInParent="true"
                android:layout_marginEnd="5dp"

                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"

                app:boxBackgroundColor="@color/cc"
                app:boxStrokeColor="@color/japan"

                android:hint="@string/link"
                android:textColorHint="@color/japan"
                app:hintTextColor="@color/japan"
                app:hintTextAppearance="@style/TextAppearance.Material3.BodySmall">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/linkView_inputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"

                    android:inputType="text"
                    android:textCursorDrawable="@drawable/cursor" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/copyLink_button"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"

                android:backgroundTint="@color/coral80"
                android:paddingTop="18dp"
                android:paddingBottom="19dp"

                android:visibility="visible"
                app:icon="@drawable/ic_clone_solid"
                app:iconTint="@color/white"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium" />

        </RelativeLayout>

        <TextView
            android:id="@+id/lastEdited_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linkView_layout"
            android:layout_alignParentStart="true"
            android:drawablePadding="5dp"

            android:gravity="center"
            android:text="@string/last_edited"
            android:textAppearance="?attr/textAppearanceBodySmall"

            android:textColor="@color/japan80"
            app:drawableStartCompat="@drawable/ic_clock_rotate_left_solid"
            app:drawableTint="@color/japan90" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>